--- a/src/modeller/main_window.glade
+++ b/src/modeller/main_window.glade
@@ -113,10 +113,13 @@
                                 <property name="hscrollbar_policy">automatic</property>
                                 <property name="shadow_type">in</property>
                                 <child>
-                                  <object class="GtkTreeView" id="treeview1">
+                                  <object class="GtkTreeView" id="sprite_view">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="model">sprite_list</property>
+                                    <property name="headers_visible">False</property>
+                                    <property name="headers_clickable">False</property>
+                                    <property name="fixed_height_mode">True</property>
                                   </object>
                                 </child>
                               </object>
@@ -281,9 +284,6 @@
                             <property name="n_columns">4</property>
                             <property name="column_spacing">4</property>
                             <property name="homogeneous">True</property>
-                            <child>
-                              <placeholder/>
-                            </child>
                             <child>
                               <object class="GtkLabel" id="label3">
                                 <property name="visible">True</property>
@@ -481,6 +481,9 @@
                                 <property name="bottom_attach">4</property>
                                 <property name="x_options">GTK_FILL</property>
                               </packing>
+                            </child>
+                            <child>
+                              <placeholder/>
                             </child>
                           </object>
                         </child>
