--- a/src/modeller/main_window.glade
+++ b/src/modeller/main_window.glade
@@ -29,6 +29,7 @@
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <property name="accel_group">menu_accelerators</property>
                       </object>
                     </child>
                     <child>
@@ -37,6 +38,7 @@
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <property name="accel_group">menu_accelerators</property>
                       </object>
                     </child>
                     <child>
@@ -45,6 +47,7 @@
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <property name="accel_group">menu_accelerators</property>
                       </object>
                     </child>
                     <child>
@@ -53,6 +56,7 @@
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <property name="accel_group">menu_accelerators</property>
                       </object>
                     </child>
                     <child>
@@ -66,6 +70,7 @@
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <property name="accel_group">menu_accelerators</property>
                       </object>
                     </child>
                   </object>
@@ -526,4 +531,5 @@
       </object>
     </child>
   </object>
+  <object class="GtkAccelGroup" id="menu_accelerators"/>
 </interface>
