--- a/src/modeller/modeller.glade
+++ b/src/modeller/modeller.glade
@@ -186,7 +186,7 @@
                                     <property name="sensitive">False</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
-                                    <property name="tooltip_text" translatable="yes">Copy shape(s) from clipboard for selected sprite</property>
+                                    <property name="tooltip_text" translatable="yes">Set shape(s) of selected sprite from clipboard</property>
                                     <property name="image">img_paste</property>
                                   </object>
                                   <packing>
@@ -235,6 +235,7 @@
                             <child>
                               <object class="GtkVBox" id="vbox4">
                                 <property name="visible">True</property>
+                                <property name="orientation">horizontal</property>
                                 <property name="spacing">4</property>
                                 <child>
                                   <object class="GtkScrolledWindow" id="scrolledwindow2">
@@ -269,6 +270,7 @@
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">True</property>
                                         <property name="image">img_add2</property>
+                                        <property name="tooltip_text" translatable="yes">Add new shape</property>
                                       </object>
                                       <packing>
                                         <property name="expand">False</property>
@@ -283,6 +285,7 @@
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">True</property>
                                         <property name="image">img_remove2</property>
+                                        <property name="tooltip_text" translatable="yes">Remove selected shape</property>
                                       </object>
                                       <packing>
                                         <property name="expand">False</property>
@@ -293,9 +296,11 @@
                                     <child>
                                       <object class="GtkButton" id="copy_shape">
                                         <property name="visible">True</property>
+                                        <property name="sensitive">False</property>
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">True</property>
                                         <property name="image">img_copy</property>
+                                        <property name="tooltip_text" translatable="yes">Copy current shape(s) to clipboard</property>
                                       </object>
                                       <packing>
                                         <property name="expand">False</property>
@@ -404,7 +409,6 @@
                               <packing>
                                 <property name="top_attach">1</property>
                                 <property name="bottom_attach">2</property>
-                                <property name="x_options">GTK_FILL</property>
                                 <property name="y_options">GTK_FILL</property>
                               </packing>
                             </child>
@@ -416,7 +420,6 @@
                               <packing>
                                 <property name="top_attach">2</property>
                                 <property name="bottom_attach">3</property>
-                                <property name="x_options">GTK_FILL</property>
                                 <property name="y_options">GTK_FILL</property>
                               </packing>
                             </child>
@@ -428,7 +431,6 @@
                               <packing>
                                 <property name="top_attach">3</property>
                                 <property name="bottom_attach">4</property>
-                                <property name="x_options">GTK_FILL</property>
                                 <property name="y_options">GTK_FILL</property>
                               </packing>
                             </child>
