--- a/src/questedit/questedit.glade
+++ b/src/questedit/questedit.glade
@@ -13,7 +13,7 @@
     </columns>
   </object>
   <object class="GtkWindow" id="main_window">
-    <property name="title" translatable="yes">Adonthell Modeller</property>
+    <property name="title" translatable="yes">Adonthell Questedit</property>
     <property name="default_width">800</property>
     <property name="default_height">600</property>
     <child>
@@ -26,7 +26,7 @@
             <child>
               <object class="GtkMenuItem" id="menuitem1">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">_Datei</property>
+                <property name="label" translatable="yes">_File</property>
                 <property name="use_underline">True</property>
                 <child type="submenu">
                   <object class="GtkMenu" id="menu1">
