--- a/src/mapedit/entity-properties.glade
+++ b/src/mapedit/entity-properties.glade
@@ -8,12 +8,18 @@
       <column type="gchararray"/>
     </columns>
   </object>
+  <object class="GtkListStore" id="model_states">
+    <columns>
+      <!-- column-name gchararray1 -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
   <object class="GtkDialog" id="entity_properties">
     <property name="border_width">5</property>
     <property name="title" translatable="yes">Edit Entity</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
-    <property name="window_position">mouse</property>
+    <property name="window_position">center</property>
     <property name="default_width">400</property>
     <property name="default_height">320</property>
     <property name="type_hint">normal</property>
@@ -40,18 +46,10 @@
                         <property name="visible">True</property>
                         <property name="left_padding">12</property>
                         <child>
-                          <object class="GtkHBox" id="hbox2">
+                          <object class="GtkTable" id="table2">
                             <property name="visible">True</property>
-                            <child>
-                              <object class="GtkImage" id="img_preview">
-                                <property name="visible">True</property>
-                                <property name="stock">gtk-missing-image</property>
-                                <property name="icon-size">6</property>
-                              </object>
-                              <packing>
-                                <property name="position">0</property>
-                              </packing>
-                            </child>
+                            <property name="n_rows">2</property>
+                            <property name="n_columns">2</property>
                             <child>
                               <object class="GtkLabel" id="lbl_name">
                                 <property name="visible">True</property>
@@ -61,7 +59,32 @@
                                 <property name="selectable">True</property>
                               </object>
                               <packing>
-                                <property name="position">1</property>
+                                <property name="left_attach">1</property>
+                                <property name="right_attach">2</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkImage" id="img_preview">
+                                <property name="visible">True</property>
+                                <property name="stock">gtk-missing-image</property>
+                                <property name="icon-size">6</property>
+                              </object>
+                              <packing>
+                                <property name="bottom_attach">2</property>
+                                <property name="x_options">GTK_FILL</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkComboBox" id="cb_state">
+                                <property name="visible">True</property>
+                                <property name="model">model_states</property>
+                              </object>
+                              <packing>
+                                <property name="left_attach">1</property>
+                                <property name="right_attach">2</property>
+                                <property name="top_attach">1</property>
+                                <property name="bottom_attach">2</property>
+                                <property name="y_options">GTK_FILL</property>
                               </packing>
                             </child>
                           </object>
@@ -69,9 +92,9 @@
                       </object>
                     </child>
                     <child type="label">
-                      <object class="GtkLabel" id="label3">
+                      <object class="GtkLabel" id="lbl_model">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">&lt;b&gt;Overview&lt;/b&gt;</property>
+                        <property name="label" translatable="yes">&lt;b&gt;Model&lt;/b&gt;</property>
                         <property name="use_markup">True</property>
                       </object>
                     </child>
@@ -100,7 +123,6 @@
                                 <property name="tooltip_text" translatable="yes">These are static objects that usually cannot be interacted with.</property>
                                 <property name="active">True</property>
                                 <property name="draw_indicator">True</property>
-                                <property name="group">type_character</property>
                               </object>
                               <packing>
                                 <property name="position">0</property>
@@ -115,7 +137,7 @@
                                 <property name="tooltip_text" translatable="yes">These are mobile objects like NPCs and creatures.</property>
                                 <property name="active">True</property>
                                 <property name="draw_indicator">True</property>
-                                <property name="group">type_item</property>
+                                <property name="group">type_scenery</property>
                               </object>
                               <packing>
                                 <property name="position">1</property>
@@ -166,20 +188,6 @@
                             <property name="n_rows">2</property>
                             <property name="n_columns">3</property>
                             <child>
-                              <object class="GtkEntry" id="entity_id">
-                                <property name="visible">True</property>
-                                <property name="can_focus">True</property>
-                                <property name="tooltip_text" translatable="yes">The unique Id for Shared and Unique entities. Scripts can refer to entities via that Id.</property>
-                                <property name="invisible_char">&#x25CF;</property>
-                              </object>
-                              <packing>
-                                <property name="left_attach">1</property>
-                                <property name="right_attach">3</property>
-                                <property name="top_attach">1</property>
-                                <property name="bottom_attach">2</property>
-                              </packing>
-                            </child>
-                            <child>
                               <object class="GtkRadioButton" id="entity_anonymous">
                                 <property name="label" translatable="yes">Anonymous</property>
                                 <property name="visible">True</property>
@@ -188,7 +196,6 @@
                                 <property name="tooltip_text" translatable="yes">Objects that cannot be referred to in scripts. They all share the same sprite.</property>
                                 <property name="active">True</property>
                                 <property name="draw_indicator">True</property>
-                                <property name="group">entity_shared</property>
                               </object>
                             </child>
                             <child>
@@ -200,7 +207,7 @@
                                 <property name="tooltip_text" translatable="yes">Objects that can be referred to in scripts via their Id, but which still share the same sprite.</property>
                                 <property name="active">True</property>
                                 <property name="draw_indicator">True</property>
-                                <property name="group">entity_unique</property>
+                                <property name="group">entity_anonymous</property>
                               </object>
                               <packing>
                                 <property name="left_attach">1</property>
@@ -237,6 +244,18 @@
                                 <property name="y_padding">5</property>
                               </packing>
                             </child>
+                            <child>
+                              <object class="GtkComboBoxEntry" id="entity_id">
+                                <property name="visible">True</property>
+                                <property name="tooltip_text" translatable="yes">Enter or select a unique id for this entity.</property>
+                              </object>
+                              <packing>
+                                <property name="left_attach">1</property>
+                                <property name="right_attach">3</property>
+                                <property name="top_attach">1</property>
+                                <property name="bottom_attach">2</property>
+                              </packing>
+                            </child>
                           </object>
                         </child>
                       </object>
@@ -261,6 +280,100 @@
                 <property name="label" translatable="yes">General</property>
               </object>
               <packing>
+                <property name="tab_fill">False</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkVBox" id="vbox3">
+                <property name="visible">True</property>
+                <property name="orientation">vertical</property>
+                <child>
+                  <object class="GtkFrame" id="frame3">
+                    <property name="visible">True</property>
+                    <property name="label_xalign">0</property>
+                    <child>
+                      <object class="GtkAlignment" id="alignment4">
+                        <property name="visible">True</property>
+                        <property name="left_padding">12</property>
+                        <child>
+                          <object class="GtkTable" id="table3">
+                            <property name="visible">True</property>
+                            <property name="n_rows">2</property>
+                            <property name="n_columns">2</property>
+                            <property name="column_spacing">2</property>
+                            <property name="row_spacing">2</property>
+                            <child>
+                              <object class="GtkLabel" id="label5">
+                                <property name="visible">True</property>
+                                <property name="xalign">1</property>
+                                <property name="label" translatable="yes">Script</property>
+                              </object>
+                              <packing>
+                                <property name="x_options">GTK_FILL</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkLabel" id="label6">
+                                <property name="visible">True</property>
+                                <property name="label" translatable="yes">Arguments</property>
+                              </object>
+                              <packing>
+                                <property name="top_attach">1</property>
+                                <property name="bottom_attach">2</property>
+                                <property name="x_options">GTK_FILL</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkEntry" id="entry_schedule_args">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="invisible_char">&#x25CF;</property>
+                              </object>
+                              <packing>
+                                <property name="left_attach">1</property>
+                                <property name="right_attach">2</property>
+                                <property name="top_attach">1</property>
+                                <property name="bottom_attach">2</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkComboBox" id="cb_schedule">
+                                <property name="visible">True</property>
+                              </object>
+                              <packing>
+                                <property name="left_attach">1</property>
+                                <property name="right_attach">2</property>
+                              </packing>
+                            </child>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <child type="label">
+                      <object class="GtkLabel" id="label3">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">&lt;b&gt;Schedule&lt;/b&gt;</property>
+                        <property name="use_markup">True</property>
+                      </object>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+              </object>
+              <packing>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child type="tab">
+              <object class="GtkLabel" id="label4">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">Character</property>
+              </object>
+              <packing>
+                <property name="position">1</property>
                 <property name="tab_fill">False</property>
               </packing>
             </child>
@@ -315,32 +428,31 @@
                     <property name="layout_style">start</property>
                     <child>
                       <object class="GtkButton" id="btn_add_tag">
-                        <property name="label">gtk-add</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
                         <property name="tooltip_text" translatable="yes">Add a new tag for this entity</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">img_add_tag</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
+                        <property name="padding">2</property>
                         <property name="position">0</property>
                       </packing>
                     </child>
                     <child>
                       <object class="GtkButton" id="btn_remove_tag">
-                        <property name="label">gtk-remove</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
                         <property name="tooltip_text" translatable="yes">Remove selected tag from this entity.</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">img_remove_tag</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
-                        <property name="padding">4</property>
+                        <property name="padding">2</property>
                         <property name="position">1</property>
                       </packing>
                     </child>
@@ -353,7 +465,7 @@
                 </child>
               </object>
               <packing>
-                <property name="position">1</property>
+                <property name="position">2</property>
               </packing>
             </child>
             <child type="tab">
@@ -362,15 +474,9 @@
                 <property name="label" translatable="yes">Tags</property>
               </object>
               <packing>
-                <property name="position">1</property>
+                <property name="position">2</property>
                 <property name="tab_fill">False</property>
               </packing>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child type="tab">
-              <placeholder/>
             </child>
           </object>
           <packing>
@@ -400,11 +506,11 @@
                 <property name="label">gtk-ok</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="can_default">True</property>
                 <property name="has_default">True</property>
                 <property name="receives_default">True</property>
                 <property name="tooltip_text" translatable="yes">Apply changes to entity.</property>
                 <property name="use_stock">True</property>
-                <signal name="clicked" handler="on_btn_okay_clicked"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -421,7 +527,6 @@
                 <property name="tooltip_text" translatable="yes">Close dialog and discard all changes.</property>
                 <property name="use_stock">True</property>
                 <property name="focus_on_click">False</property>
-                <signal name="clicked" handler="on_btn_cancel_clicked"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -443,5 +548,13 @@
       <action-widget response="0">btn_okay</action-widget>
       <action-widget response="0">btn_cancel</action-widget>
     </action-widgets>
+  </object>
+  <object class="GtkImage" id="img_add_tag">
+    <property name="visible">True</property>
+    <property name="stock">gtk-add</property>
+  </object>
+  <object class="GtkImage" id="img_remove_tag">
+    <property name="visible">True</property>
+    <property name="stock">gtk-remove</property>
   </object>
 </interface>
