--- a/src/mapedit/entity-properties.glade
+++ b/src/mapedit/entity-properties.glade
@@ -49,7 +49,8 @@
                           <object class="GtkTable" id="table2">
                             <property name="visible">True</property>
                             <property name="n_rows">2</property>
-                            <property name="n_columns">2</property>
+                            <property name="n_columns">3</property>
+                            <property name="column_spacing">4</property>
                             <child>
                               <object class="GtkLabel" id="lbl_name">
                                 <property name="visible">True</property>
@@ -60,7 +61,7 @@
                               </object>
                               <packing>
                                 <property name="left_attach">1</property>
-                                <property name="right_attach">2</property>
+                                <property name="right_attach">3</property>
                               </packing>
                             </child>
                             <child>
@@ -78,12 +79,33 @@
                               <object class="GtkComboBox" id="cb_state">
                                 <property name="visible">True</property>
                                 <property name="model">model_states</property>
+                                <child>
+                                  <object class="GtkCellRendererText" id="cb_state_rndr"/>
+                                  <attributes>
+                                    <attribute name="text">0</attribute>
+                                  </attributes>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="left_attach">2</property>
+                                <property name="right_attach">3</property>
+                                <property name="top_attach">1</property>
+                                <property name="bottom_attach">2</property>
+                                <property name="y_options">GTK_FILL</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkLabel" id="label7">
+                                <property name="visible">True</property>
+                                <property name="xpad">10</property>
+                                <property name="label" translatable="yes">State</property>
                               </object>
                               <packing>
                                 <property name="left_attach">1</property>
                                 <property name="right_attach">2</property>
                                 <property name="top_attach">1</property>
                                 <property name="bottom_attach">2</property>
+                                <property name="x_options">GTK_FILL</property>
                                 <property name="y_options">GTK_FILL</property>
                               </packing>
                             </child>
