--- a/src/mapedit/entity-properties.glade
+++ b/src/mapedit/entity-properties.glade
@@ -14,6 +14,12 @@
       <column type="gchararray"/>
     </columns>
   </object>
+  <object class="GtkListStore" id="char_schedules">
+    <columns>
+      <!-- column-name gchararray1 -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
   <object class="GtkDialog" id="entity_properties">
     <property name="border_width">5</property>
     <property name="title" translatable="yes">Edit Entity</property>
@@ -361,6 +367,13 @@
                             <child>
                               <object class="GtkComboBox" id="cb_schedule">
                                 <property name="visible">True</property>
+                                <property name="model">char_schedules</property>
+                                <child>
+                                  <object class="GtkCellRendererText" id="cb_schedule_rndr"/>
+                                  <attributes>
+                                    <attribute name="text">0</attribute>
+                                  </attributes>
+                                </child>
                               </object>
                               <packing>
                                 <property name="left_attach">1</property>
